RESOLVED FIXED 246989
Fix the HAVE(ACCESSIBILITY_ANIMATED_IMAGES) build for some SDK versions
https://bugs.webkit.org/show_bug.cgi?id=246989
Summary Fix the HAVE(ACCESSIBILITY_ANIMATED_IMAGES) build for some SDK versions
Wenson Hsieh
Reported 2022-10-24 21:15:24 PDT
.
Attachments
Radar WebKit Bug Importer
Comment 1 2022-10-24 21:15:43 PDT
Wenson Hsieh
Comment 2 2022-10-24 21:20:08 PDT
EWS
Comment 3 2022-10-24 21:32:56 PDT
Committed 255941@main (e57390177a54): <https://commits.webkit.org/255941@main> Reviewed commits have been landed. Closing PR #5734 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.