Fix the HAVE(ACCESSIBILITY_ANIMATED_IMAGES) build for some SDK versions https://bugs.webkit.org/show_bug.cgi?id=246989

Reviewed by Tim Horton.

Use `SOFT_LINK_OPTIONAL` and `SOFT_LINK_CONSTANT`, respectively, to pull in the new SPI on versions
of the SDK where `HAVE(ACCESSIBILITY_ANIMATED_IMAGES)` is enabled, but these SPI don't yet exist.

* Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(SOFT_LINK_CONSTANT):
(WebKit::accessibilityPreferences):
(WebKit::WebProcessPool::registerNotificationObservers):

Canonical link: https://commits.webkit.org/255941@main