Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm
@@ -183,6 +183,12 @@ SOFT_LINK_PRIVATE_FRAMEWORK(BackBoardServices)
 SOFT_LINK(BackBoardServices, BKSDisplayBrightnessGetCurrent, float, (), ());
 #endif
 
+#if HAVE(ACCESSIBILITY_ANIMATED_IMAGES)
+SOFT_LINK_LIBRARY_OPTIONAL(libAccessibility)
+SOFT_LINK_OPTIONAL(libAccessibility, _AXSReduceMotionAutoplayAnimatedImagesEnabled, Boolean, (), ());
+SOFT_LINK_CONSTANT(libAccessibility, kAXSReduceMotionAutoplayAnimatedImagesChangedNotification, CFStringRef)
+#endif
+
 #define WEBPROCESSPOOL_RELEASE_LOG(channel, fmt, ...) RELEASE_LOG(channel, "%p - WebProcessPool::" fmt, this, ##__VA_ARGS__)
 
 @interface WKProcessPoolWeakObserver : NSObject {
@@ -262,7 +268,8 @@ static AccessibilityPreferences accessibilityPreferences()
 #endif
     preferences.enhanceTextLegibilityOverall = _AXSEnhanceTextLegibilityEnabled();
 #if HAVE(ACCESSIBILITY_ANIMATED_IMAGES)
-    preferences.imageAnimationEnabled = _AXSReduceMotionAutoplayAnimatedImagesEnabled();
+    if (auto* functionPointer = _AXSReduceMotionAutoplayAnimatedImagesEnabledPtr())
+        preferences.imageAnimationEnabled = functionPointer();
 #endif
     return preferences;
 }
@@ -822,7 +829,8 @@ void WebProcessPool::registerNotificationObservers()
     addCFNotificationObserver(accessibilityPreferencesChangedCallback, kAXSInvertColorsEnabledNotification);
 #endif
 #if HAVE(ACCESSIBILITY_ANIMATED_IMAGES)
-    addCFNotificationObserver(accessibilityPreferencesChangedCallback, kAXSReduceMotionAutoplayAnimatedImagesChangedNotification);
+    if (auto notificationName = getkAXSReduceMotionAutoplayAnimatedImagesChangedNotification())
+        addCFNotificationObserver(accessibilityPreferencesChangedCallback, notificationName);
 #endif
 #if HAVE(MEDIA_ACCESSIBILITY_FRAMEWORK)
     addCFNotificationObserver(mediaAccessibilityPreferencesChangedCallback, kMAXCaptionAppearanceSettingsChangedNotification);
